--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,16 @@ h6 {
 /*             */
 /***************/
 
+@font-face {
+    font-family: "Montserrat";
+    src: url("./assets/fonts/Montserrat-VariableFont_wght.ttf")
+        format("truetype");
+    font-weight: 700; /* Bold weight */
+    font-style: normal;
+}
+
+/* Other font weights can be added similarly */
+
 html,
 body {
     scroll-behavior: smooth;
@@ -89,6 +99,7 @@ body {
 body {
     background-color: var(--background-color);
     color: var(--font-main);
+    font-family: "Montserrat", sans-serif;
 }
 
 .app {
