--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,9 @@ nav {
     padding: 1px;
     background-color: var(--background-color-secondary);
 
+    display: flex;
+    align-items: center;
+
     transition: background-color 0.4s ease-in;
 }
 
@@ -168,8 +171,10 @@ nav {
     border-radius: 50%;
     display: flex;
     align-items: center;
+    transform: scale(1.3);
 
     background-color: var(--background-color);
+    border: 2px solid var(--background-color-secondary);
 }
 
 .theme-indicator.dark {
